@@ -76,7 +76,6 @@ import io.crate.metadata.FunctionImplementation;
 import io.crate.metadata.FunctionInfo;
 import io.crate.metadata.Functions;
 import io.crate.metadata.Reference;
-import io.crate.metadata.Scalar;
 import io.crate.metadata.table.Operation;
 import io.crate.sql.ExpressionFormatter;
 import io.crate.sql.parser.SqlParser;
@@ -145,7 +144,7 @@ import java.util.Optional;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import static io.crate.collections.Lists2.mapTail;
+import static io.crate.common.collections.Lists2.mapTail;
 
 
 /**
@@ -288,17 +287,15 @@ public class ExpressionAnalyzer {
             return symbol;
         });
 
-        WindowFrameDefinition windowFrameDefinition = WindowDefinition.DEFAULT_WINDOW_FRAME;
+        WindowFrameDefinition windowFrameDefinition = WindowDefinition.UNBOUNDED_PRECEDING_CURRENT_ROW;
         if (window.getWindowFrame().isPresent()) {
             WindowFrame windowFrame = window.getWindowFrame().get();
             FrameBound start = windowFrame.getStart();
             FrameBoundDefinition startBound = convertToAnalyzedFrameBound(context, start);
 
-            FrameBoundDefinition endBound = null;
-            if (windowFrame.getEnd().isPresent()) {
-                endBound = convertToAnalyzedFrameBound(context, windowFrame.getEnd().get());
-            }
-
+            FrameBoundDefinition endBound = windowFrame.getEnd()
+                .map(end -> convertToAnalyzedFrameBound(context, end))
+                .orElse(new FrameBoundDefinition(FrameBound.Type.CURRENT_ROW));
             windowFrameDefinition = new WindowFrameDefinition(windowFrame.getType(), startBound, endBound);
         }
 
@@ -537,11 +534,9 @@ public class ExpressionAnalyzer {
         @Override
         protected Symbol visitExtract(Extract node, ExpressionAnalysisContext context) {
             Symbol expression = process(node.getExpression(), context);
-            Scalar<Number, Long> scalar = ExtractFunctions.getScalar(node.getField());
-            FunctionInfo functionInfo = scalar.info();
             return allocateFunction(
-                functionInfo.ident().name(),
-                ImmutableList.of(expression),
+                ExtractFunctions.functionNameFrom(node.getField()),
+                List.of(expression),
                 context);
         }
 
